--- a/info.yaml
+++ b/info.yaml
@@ -18,7 +18,7 @@ project:
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
     - "project.v"
-    - "flipflop.v"
+    - "flipFlop.v"
     - "programMemory.v"
     - "registerSet.v"
     - "alu.v"
